Alignment fix for new form elements.

--- a/css/style.css
+++ b/css/style.css
@@ -147,11 +147,15 @@ div.filter-section {
     letter-spacing: 0.3em;
     text-indent: -0.5em; }
 
-div.filter-section:nth-of-type(n+2) {
+div.filter-section:nth-of-type(n+3) {
   margin-bottom: 1em; }
 
-div.filter-section:nth-of-type(n+3) {
-  border-left: 3px solid rgba(34, 87, 98, 0.5); }
+div.filter-section:nth-of-type(n+1) {
+  margin-left: 3px; }
+
+div.filter-section:nth-of-type(n+4) {
+  border-left: 3px solid rgba(34, 87, 98, 0.5);
+  margin-left: 0px; }
 
 div.filters {
   padding: 1em;
@@ -170,10 +174,12 @@ div.filters {
     top: -0.3em;
     margin-right: 0.4em; }
 
+#filters-heading a {
+  text-decoration: none; }
+
 #filters-heading h3 {
   font-weight: normal;
-  margin-top: 0px;
-  color: #00abf4; }
+  margin-top: 0px; }
   #filters-heading h3 .icon {
     margin-right: 1em;
     display: inline-block; }
