--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -43,12 +43,17 @@ div.filter-section {
 	}
 }
 
-div.filter-section:nth-of-type(n+2){
+div.filter-section:nth-of-type(n+3){
 	margin-bottom: 1em;
 }
 
-div.filter-section:nth-of-type(n+3){
+div.filter-section:nth-of-type(n+1){
+	margin-left: 3px;
+}
+
+div.filter-section:nth-of-type(n+4){
 	border-left: 3px solid transparentize($main-fg, 0.5);
+	margin-left: 0px;
 }
 
 div.filters {
@@ -80,11 +85,13 @@ div.filters {
 }
 
 #filters-heading{
+	a {
+		text-decoration: none;
+	}
 
 	h3 {
 		font-weight:normal;
 		margin-top:0px;
-		color: $active-link;
 
 		.icon {
 			margin-right: 1em;
